2007-08-08  Kouhei Sutou  <kou@cozmixng.org>

	* src/rbgobj_enums.c: supported convenience GEnum and GFlags
	notation. e.g.:
	  GLib::UTF8.normalize(utf8, GLib::NormalizeMode::NFD)
          ->
	  GLib::UTF8.normalize(utf8, :nfd)

	  key_file.load_from_data(data,
	                          GLib::KeyFile::KEEP_COMMENTS |
	                          GLib::KeyFile::KEEP_TRANSLATIONS)
	  ->
	  key_file.load_from_data(data, [:keep_contents, :keep_translations])

	* tests/test_enum.rb: added tests for the above feature.

2007-07-25  Sjoerd Simons   <sjoerd@luon.net>
	* src/rbgobj_signal.c: Properly use the GValueArray api in emit_body.
	Causes all values in the parameter array to be unset after emission.
	Fixing some reference leaks.

2007-07-20  Masahiro Sakai  <sakai@tom.sfc.keio.ac.jp>

	* src/rbgobj_object.c, src/rbgobject.h: deperecate
	rbgobj_add_abstract_but_create_instance_class() and
	move abstract-type check from .allocate to dummy #initialize.

2007-07-16  Masahiro Sakai  <sakai@tom.sfc.keio.ac.jp>

	* src/rbgobj_type.c: use rbgobj_init_object_class() to initialize
	object class.
	* src/rbgobj_object.c, src/global.h: add new function
	rbgobj_init_object_class().

	* src/rbgobj_object.c (rbgobj_gobject_new): check returned value of
	g_object_newv().

2007-07-14  Masahiro Sakai  <sakai@tom.sfc.keio.ac.jp>

	* src/rbgobject.h: remove unused/undefined functions
	rbgobj_boxed_ref() and rbgobj_boxed_unref().
	
	* src/rbgobject.c: new function rbgobj_invalidate_relatives().
	* src/rbgobject.c: move GObject stuffs to rbgobj_object.c again.
	* src/rbgobj_object.c: deprecate rbgobj_object_create().
	* src/rbgobj_boxed.c: deprecate rbgobj_boxed_create().

	* src/utils_callback.c: brush up.

2007-07-13  Guillaume Cottenceau

	* src/rbglib_iochannel.c, src/rbglib_maincontext.c,
	src/rbglib_mainloop.c, src/rbglib_source.c, src/rbglib_utils.c,
	src/rbgobj_boxed.c, src/rbgobj_object.c, src/rbgobj_param.c,
	src/rbgobj_paramspecs.c, src/rbgobj_signal.c, src/rbgobj_type.c,